[package]
name = "toxo"
version = "0.1.0"
edition = "2024"

[dependencies]
data-url = "0.3.1"
deno_ast = { version = "0.48.1", features = ["emit", "transpiling"] }
deno_console = "0.209.0"
deno_core = "0.352.0"
deno_crypto = "0.223.0"
deno_error = "0.6.1"
deno_fetch = "0.233.0"
deno_net = "0.201.0"
deno_path_util = "0.4.0"
deno_permissions = "0.68.0"
deno_telemetry = "0.31.0"
deno_tls = "0.196.0"
deno_url = "0.209.0"
deno_web = "0.240.0"
deno_webgpu = "0.176.0"
deno_webidl = "0.209.0"
deno_webstorage = "0.204.0"
http = "1.3.1"
http-body-util = "0.1.3"
import_map = "0.22.0"
sys_traits = { version = "0.1.16", features = ["real"] }
tokio = { version = "1.46.0", features = ["full"] }
